Correct em space placement in link titles
Fixes ugly underlining of nothing on the default link post look

--- a/Theme.html
+++ b/Theme.html
@@ -669,7 +669,7 @@
                     {block:Link}
                         <a class="link" href="{URL}" target="{Target}">
                             <h3>
-                                {Name}&nbsp;&#187;{block:Host}&emsp;<span class="linkhost">[{block:Author}{Author}, {/block:Author}{Host}]</span>{/block:Host} 
+                                {Name}&nbsp;&#187;{block:Host}<span class="linkhost">&emsp;[{block:Author}{Author}, {/block:Author}{Host}]</span>{/block:Host}
                             </h3>
                             {block:Thumbnail}
                                 <img src="{Thumbnail-HighRes}" class="linkimage"/>
