--- a/Theme.html
+++ b/Theme.html
@@ -38,7 +38,7 @@
         <link rel="shortcut icon" href="{Favicon}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
         <link rel="stylesheet" type="text/css" href="http://static.tumblr.com/2wliono/EJxpafak4/socicon.css">
-        <link rel="stylesheet" type="text/css" href="http://static.tumblr.com/2wliono/HT3pcucux/vision_core.css">{block:IfNotBackgroundImage}
+        <link rel="stylesheet" type="text/css" href="http://static.tumblr.com/2wliono/anTpdq6d9/vision_core.css">{block:IfNotBackgroundImage}
         <link rel="stylesheet" type="text/css" href="http://static.tumblr.com/2wliono/RBIpb98gt/vision_plain.css">{/block:IfNotBackgroundImage}
         <meta name="description" content="{MetaDescription}">
         <style id="vision_dynamic">
@@ -104,7 +104,7 @@
             a.link h3 {
                 color: {block:IfCustomColors}{color:Links}{/block:IfCustomColors}{block:IfNotCustomColors}{AccentColor}{/block:IfNotCustomColors};
             }
-            a.link blockquote {
+            a.link blockquote, .npf-link-block .title, .npf-link-block .description {
                 color: {block:IfCustomcolors}{color:Text}{/block:IfCustomColors}{block:IfNotCustomColors}{TitleColor}{/block:IfNotCustomColors};
             }
             div.answerbox {
